# RetailBrain

./: .env.example  .replit  INSTALLATION_GUIDE.md  LOCAL_INSTALLATION.md  README.md  agent_diagrams.html  api_gateway.py  app.py  asgi.py  asgi_adapter.py  benchmark_agent_selection.py  config.py  dependencies.py  index.md  install_with_pip25.py  main.py  main_head.txt  models.py  multi_turn_test.py  nohup.out  package-lock.json  package.json  pyproject.toml  replit.nix  requirements-local.txt  requirements-pip25-py312.txt  requirements-python312.txt  requirements-standard.txt  run.py  run_app.py  run_asgi.py  run_fastapi.py  run_tests.py  run_uvicorn.py  setup_local_env.py  simple_test.py  start_api.py  start_backend_on_5001.py  start_backend_port_5000.py  start_backend_port_5001.sh  (+11 more)
agents/: base_agent.py  package_tracking.py  product_info.py  reset_password.py  store_locator.py
api/: agent_builder.py  agent_builder_service.py  chat.py  circuit_breaker.py  routes.py  telemetry.py
api_services/: base_api_client.py  order_api.py  product_api.py  store_api.py
attached_assets/: Pasted--File-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-starlette-exception-handler-1744433862351.txt  Pasted-2025-04-13-18-11-53-048-backend-orchestration-agent-factory-INFO-Loaded-2-hardcoded-agents-for-1744568003387.txt  Pasted-2025-04-13-19-00-23-926-backend-scripts-initialize-agents-INFO-Successfully-initialized-Guardr-1744570941565.txt  Pasted-2025-04-13-19-13-08-339-backend-orchestration-agent-factory-INFO-Loading-agents-from-database--1744571611460.txt  (+10 more)
(+404 files in other folders)
