[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langchain-openai>=0.3.12",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "openai>=1.72.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "sqlalchemy>=2.0.40",
    "prometheus-client>=0.21.1",
    "flask-cors>=5.0.1",
    "logging>=0.4.9.6",
    "psutil>=7.0.0",
    "databricks-sdk>=0.49.0",
    "langsmith>=0.3.27",
    "trafilatura>=2.0.0",
    "twilio>=9.5.2",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
